--- a/css/custom.css
+++ b/css/custom.css
@@ -1,73 +1,130 @@
-body {background-color: blue;}
+body {background-color: blue;
+}
+.backround{
+    display: inline-block;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/Kalnai.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    filter: blur(40px); 
+}
     main{
         display: inline-block;
         width: 800px;
-        margin-top: 100px;
-        margin-left: calc(50% - 400px);
+       top: 50%;
+       left: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
     }
-        .left-column {display: inline-block;
-        float: left;
-        width: 40%;
+.left-column {display: inline-block;
+    float: left;
+    width: 40%;
     background-color: lightblue;
     padding: 40px;
-    margin-top: 20px;
+    position: absolute;
+    top: 30px;
+    bottom:30px;
+    background-image: url(../img/Kalnai.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
 }
 
-    .h1 {display: inline-block;}
+    h1 {}
    
-    footer {display: inline-block;}
+    footer {position: absolute;
+    bottom: 20px;}
         
-    footer > a {display: inline-block;}
+    footer > a {color:#fff}
        
-    footer > span {display: inline-block;}
+    footer > span {}
         
         
         .right-column {
-            display: block;
-            float: left;
+            display: inline-block;
+            float: right;
             width: 60%;
             padding: 60px;
-            background-color:paleturquoise;}
+        background-color: white;
+        position: relative;}
 
         .close{ 
             display: inline-block;
-            float: right;}
+            font-size: 30px;
+            color: lightgray;
+            font-weight: lighter;
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            line-height: 54px;
+            float: left;
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            transform-origin: center;
+            transform:rotate(45deg);
+            cursor: pointer;
+           
+}
             
         .form {width: 100%;
-            display: inline-block;
-            float: left;}
+                display: inline-block;
+               }
             
         
-        .form-row {margin-top: 5px;
+        .form-row {
             display: inline-block;
-            float: left;}
+            width: 100%;}
+            .form-row + .form-row 
+            {   
+                margin-top: 40px;}
            
-        label {margin-top: 5px;
+        label {
             display: inline-block;
             float: left;
-            text-transform: uppercase;}
+            text-transform: uppercase;
+            font-size: 15px;
+            width:100%;
+            line-height: 15px;
+            font-weight: 700;
+        color: #777}
             
-        input {margin-top: 5px;
+        input {
             display: inline-block;
-            float: left;}
+            width:100%;
+            border: none;
+            font-size: 18px;
+            border-bottom: 1px solid #777;
+            color: #000;
+        line-height: 40px;}
         
         .btn { 
             display: inline-block;
-            padding: 5px;
-            text-align: center;
-            padding-left: 15px;
-            padding-right: 15px;
+            float: left;
+            padding: 10px;
+            padding-left: 40px;
+            padding-right: 40px;
             font-family: Arial;
-            width: 150px;
+            font-size: 20px;
             border-radius: 20px;
             background-color: darkblue;
-            color:white;}
+            color:white;
+        line-height: 20px;}
 
         .form-row > span {
             display: inline-block;
-            margin-top: 5px;}
+            float: left;
+            font-size: 20px;
+            line-height: 20px;
+        padding: 10px;}
         
         .form-row > a {
             display: inline-block;
-            margin-top: 5px;}
+            float: left;
+            line-height: 20px;
+            font-size: 20px;
+            padding:10px;}
+            
 
